Include sort button on transaction date

--- a/transactions.html
+++ b/transactions.html
@@ -88,7 +88,12 @@
                   <table class="table">
                     <thead>
                       <tr>
-                        <th scope="col">Data</th>
+                        <th scope="col">Data 
+                          <button class="sort" id="sort-button">
+                            <i class="bi bi-caret-down-fill"></i>
+                            <i class="bi bi-caret-up-fill"></i>
+                          </button>
+                        </th>
                         <th scope="col">Valor</th>
                         <th scope="col">Tipo</th>
                         <th scope="col">Descrição</th>
