--- a/transactions.html
+++ b/transactions.html
@@ -85,7 +85,7 @@
             <div class="container">
               <div class="row">
                 <div class="col">
-                  <table class="table">
+                  <table class="table table-hover">
                     <thead>
                       <tr>
                         <th scope="col">Data 
